--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,6 @@
 @import url(https://fonts.googleapis.com/css?family=Montserrat);
 @import url(https://fonts.googleapis.com/css?family=Archivo);
+@import url(https://fonts.googleapis.com/css?family=Inter);
 
 
 * {
