--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -4,25 +4,28 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 21.5rem;
+    height: 22.5rem;
     border-radius: .3rem;
     box-shadow: 0rem .25rem 18px lightgrey;
 
     &__image {
-        background-color: grey;
+        // background-color: grey;
         border-radius: .3rem .3rem 0rem 0rem;
         height: 12.5rem;
         width: 100%;
+        object-fit: cover;
     }
 
     &__container {
         width: 18rem;
+        margin-top: .5rem;
     }
 
     &__subtitle {
-        padding: 1rem 0rem .5rem 0rem;
+        margin-top: .5rem;
+        padding: 1rem 0rem .5rem 0rem; 
         color: #135582;
-        font-size: 1rem;
+        font-size: 1.3rem;
         font-family: "Archivo";
         font-weight: bold;
         text-transform: uppercase;
@@ -32,7 +35,6 @@
         font-size: .875rem;
         color: #6c757d;
         font-family: "Archivo";
-        font-weight: bold;
     }
 
     &__button {
