--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -5,6 +5,9 @@
   align-items: flex-start;
   padding-left: 1.0625rem;
   box-shadow: 7px 8px 16px 0 rgba(143, 155, 179, 0.2);
+  position: fixed;
+  width: 100%;
+  background-color: white;
 
   &__phone {
     display: flex;
