Starting Rewards page

--- a/src/components/RewardsFooter/RewardsFooter.scss
+++ b/src/components/RewardsFooter/RewardsFooter.scss
@@ -1,4 +1,4 @@
-.footer {
+.rewards-footer {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -46,7 +46,7 @@
     > p {
       font-size: 0.75rem;
       font-family: "Archivo";
-      color: #135582;
+      color: #333333;
     }
   }
 
@@ -64,7 +64,7 @@
     > p {
       font-size: 0.75rem;
       font-family: "Archivo";
-      color: #333333;
+      color: #135582;
     }
   }
 
