--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -1,57 +1,80 @@
 .card {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 358px;
+  margin: 0 16px;
+  box-shadow: 0rem 0.25rem 18px lightgrey;
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
 
-    margin: 1rem 1rem 0rem 1rem;
+  &__secton {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 358px;
+  }
+
+  &__image {
+    position: relative;
+    z-index: -2;
+    bottom: 0.8rem;
+
+    > img {
+        // position: absolute;
+    }
+  }
+
+  &__container {
     display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
-    height: 22.5rem;
-    border-radius: .3rem;
-    box-shadow: 0rem .25rem 18px lightgrey;
+  }
 
-    &__image {
-        // background-color: grey;
-        border-radius: .3rem .3rem 0rem 0rem;
-        height: 12.5rem;
-        width: 100%;
-        object-fit: cover;
+  &__info {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    width: 100%;
+    gap: 0.5rem;
+    padding-left: 16px;
+    padding-bottom: 16px;
+
+    > h2 {
+      font-family: "Montserrat";
+      color: #135582;
+      font-size: 20px;
+      font-weight: bolder;
     }
 
-    &__container {
-        width: 18rem;
-        margin-top: .5rem;
+    > p {
+      font-family: "Archivo";
+      font-size: 12px;
+      color: #828282;
+    }
+  }
+
+  &__button {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    width: 100%;
+    padding-left: 16px;
+    padding-bottom: 16px;
+    font-family: "inter";
+
+    &-secton {
     }
 
-    &__subtitle {
-        margin-top: .5rem;
-        padding: 1rem 0rem .5rem 0rem; 
-        color: #135582;
-        font-size: 1.25rem;
-        font-family: "Archivo";
-        font-weight: bold;
-        text-transform: uppercase;
-    }
+    &-text {
+      border-radius: 20px;
 
-    &__text {
-        font-size: .75rem;
-        color: #6c757d;
-        font-family: "Archivo";
+      background-color: #135582;
+      color: white;
+      font-size: 14px;
+      padding: 8px 20px;
     }
-
-    &__button {
-        width: 6rem;
-        height: 2.2rem;
-        background-color: #135582;
-        ;
-        color: #FFFFFF;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        border-radius: 1.8rem;
-        margin-top: 1rem;
-    }
-
-    &__button-text {
-        font-size: .875rem;
-        font-family: "Archivo";
-    }
+  }
 }
