--- a/src/pages/HomePage/HomePage.scss
+++ b/src/pages/HomePage/HomePage.scss
@@ -1,7 +1,12 @@
 .homepage {
-    width: 100%;
+  width: 100%;
 
-    &__cards {
-        padding-bottom: 6rem;
-    }
+  &__cards {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 6rem;
+    gap: 1rem;
+  }
 }
