--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -1,3 +1,5 @@
+@use "../../styles//partials/variables" as *;
+
 .card {
   display: flex;
   justify-content: center;
@@ -19,10 +21,6 @@
     position: relative;
     z-index: -2;
     bottom: 0.8rem;
-
-    > img {
-        // position: absolute;
-    }
   }
 
   &__container {
@@ -44,7 +42,7 @@
 
     > h2 {
       font-family: "Montserrat";
-      color: #135582;
+      color: $primary-color;
       font-size: 20px;
       font-weight: bolder;
     }
@@ -65,13 +63,10 @@
     padding-bottom: 16px;
     font-family: "inter";
 
-    &-secton {
-    }
-
     &-text {
       border-radius: 20px;
 
-      background-color: #135582;
+      background-color: $primary-color;
       color: white;
       font-size: 14px;
       padding: 8px 20px;
