--- a/src/components/HeroSection/HeroSection.scss
+++ b/src/components/HeroSection/HeroSection.scss
@@ -1,3 +1,5 @@
+@use "../../styles//partials/variables" as *;
+
 .hero {
   display: flex;
   flex-direction: column;
@@ -18,14 +20,14 @@
     gap: 0.125rem;
 
     > h2 {
-      color: #135582;
+      color: $primary-color;
       font-weight: bold;
       font-family: "inter";
     }
 
     &-balance {
       font-size: 0.75rem;
-      color: #135582;
+      color: $primary-color;
       font-family: "Archivo";
     }
   }
@@ -47,14 +49,14 @@
     font-family: "inter";
 
     &-left {
-      border: 2px solid #135582;
+      border: 2px solid $primary-color;
       border-radius: 20px;
       padding: 0.5rem 1.25rem;
-      color: #135582;
+      color: $primary-color;
     }
 
     &-right {
-      background-color: rgba($color: #135582, $alpha: 0.7);
+      background-color: rgba($color: $primary-color, $alpha: 0.7);
       border-radius: 20px;
       padding: 0.5rem 1.25rem;
       color: white;
