--- a/src/components/RewardsHeader/RewardsHeader.scss
+++ b/src/components/RewardsHeader/RewardsHeader.scss
@@ -1,3 +1,5 @@
+@use "../../styles//partials/variables" as *;
+
 .rewards-header {
     display: flex;
     flex-direction: column;
@@ -41,7 +43,7 @@
     &__balance {
         font-family: "Archivo";
         font-weight: bold;
-        color: #135582;
+        color: $primary-color;
         margin-top: .3rem;
         padding-left: 1.0625rem;
     }
@@ -55,7 +57,7 @@
         margin-left: 6.3rem;
         font-family: "Montserrat";
         font-weight: bolder;
-        color: #135582;
+        color: $primary-color;
         font-size: 1.5rem;
         
     }
@@ -72,8 +74,8 @@
           > p {
             font-family: "Archivo";
             font-weight: bold;
-            color: #135582;
-            border-bottom: 4px solid #135582;
+            color: $primary-color;
+            border-bottom: 4px solid $primary-color;
             padding-bottom: 0.8125rem;
             padding-left: 2.4rem;
             padding-right: 2.5rem;
@@ -84,7 +86,7 @@
           > p {
             font-family: "Archivo";
             font-weight: bold;
-            color: #135582;
+            color: $primary-color;
             border-bottom: 4px solid white;
             padding-bottom: 0.8125rem;
             padding-right: 2.5rem;
